tests/invalid/vars_in_wrong_places.err_exp
vars_in_wrong_places.m:002: In clause head: error: atom expected at Oops1.
vars_in_wrong_places.m:003: In equation head: error: atom expected at Oops2.
vars_in_wrong_places.m:004: In equation head: error: atom expected at Oops3.
vars_in_wrong_places.m:005: In `:- pred' declaration: error: atom expected at
vars_in_wrong_places.m:005:   Oops4.
vars_in_wrong_places.m:006: In `:- func' declaration error: atom expected at
vars_in_wrong_places.m:006:   Oops5.
vars_in_wrong_places.m:007: In `:- mode' declaration error: atom expected at
vars_in_wrong_places.m:007:   Oops6.
vars_in_wrong_places.m:008: In function `:- mode' declaration error: atom
vars_in_wrong_places.m:008:   expected at Oops7.
vars_in_wrong_places.m:001: Warning: interface for module
vars_in_wrong_places.m:001:   `vars_in_wrong_places' does not export anything.
vars_in_wrong_places.m:001:   To be useful, a module should export something. A
vars_in_wrong_places.m:001:   file should contain at least one declaration
vars_in_wrong_places.m:001:   other than `:- import_module' in its interface
vars_in_wrong_places.m:001:   section(s). This would normally be a `:- pred',
vars_in_wrong_places.m:001:   `:- func', `:- type', `:- inst' or `:- mode'
vars_in_wrong_places.m:001:   declaration.
